# routes/battles.js
@@ -7,6 +7,8 @@ router.get("/", battleController.getAll);
 router.get("/:id", battleController.getById);
 
 router.post("/new", battleController.createNew);
+router.post("/start", battleController.startNewBattle);
+router.get("/turn/:battleID", battleController.listTurn);
 
 router.put("/update/:id", battleController.updateBattle);
 
